hierarchy of contents-item was changed
階層を変えました。

--- a/index.html
+++ b/index.html
@@ -26,36 +26,32 @@
     </header> 
     <main>
       <img src="IMG_40082.jpg" alt="main-top"/>
-      <br>
       <div class="contents-item">
-        <div class="diary">
-          <a type="button" class="button" href="https://#">diary</a>
-          <h1>
-            <a href="https://#">活動記録</a>
-            <h2>
-              <a href="https://#">教会探訪日記</a>
-              <p>日本各地(？)の様々な教会を巡ります。</p>
-              <a href="https://#">〇〇〇</a>
-              <p>日常の「カト研」活動記録です。</p>
-            </h2>  
-          </h1>  
-        </div>  
-        <div class="about-us">
-          <a type="button" class="button" href="https://#">about us</a>
-          <h1>
-            <a href="https://#">カトリック研究会について</a>
-            <p></p>
-          </h1>
-        </div>
-        <div class="contact">
-          <a type="button" class="button" href="https://#">contact</a>
-          <h1>
-            <a href="https://#">コンタクトフォーム</a>
-            <p></p>
-          </h1>
-        </div>
+        <ul>
+          <div class="diary">
+            <h1>
+              <a type="button" class="button" href="https://#">diary
+              <h2>活動記録
+              <p>日本各地(？)の様々な教会を巡ります。</p></h2></a>
+            </h1>
+          </div>
+          <div class="about-us">  
+            <h1>
+              <a type="button" class="button" href="https://#">about us
+              <h2>カトリック研究会について
+              <p>自己紹介・日々の活動をご紹介します</p></h2></a>
+            </h1>
+          </div>
+          <div class="contact">  
+            <h1>
+              <a type="button" class="button" href="https://#">contact
+              <h2>コンタクトフォーム
+              <p>感想やおすすめの教会情報等あればお寄せください</p></h2></a>
+            </h1>
+          </div>
+        </ul>  
       </div>  
-    </main>     
+    </main>   
   </body>
   <footer>
     <div class="copy-container">
