add the link of instagram

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             </h1>
           </div>
         </ul>  
+      </div>
+      <div class="sns">
+        <a href="#" class="btn-social-long-insta">
+        <i class="fa fa-instagram"></i> <span>Follow Me</span>
+        </a>
       </div>  
     </main>   
   </body>
