--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="responsive.css" rel="stylesheet" type="text/css" />
   </head>
@@ -52,11 +53,11 @@
         </ul>  
       </div>
       <div class="sns">
-        <a href="#" class="btn-social-long-insta">
-        <i class="fa fa-instagram"></i> <span>Follow Me</span>
+        <a href="#" class="insta_btn2">
+        <i class="fab fa-instagram"></i> <span>Follow Me</span>
         </a>
       </div>  
-    </main>   
+    </main>     
   </body>
   <footer>
     <div class="copy-container">
