--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       </div>
       <div class="header-list">
         <ul>
-          <a href="https://#">diary</a>
-          <a href="https://#">about us</a>
-          <a href="https://#">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
         </ul>  
       </div>  
     </header> 
@@ -30,30 +30,27 @@
       <div class="contents-item">
         <ul>
           <div class="diary">
-            <h1>
-              <a type="button" class="button" href="https://#">diary
-              <h2>活動記録
-              <p>日本各地(？)の様々な教会を巡ります。</p></h2></a>
-            </h1>
+            <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
+            <h1>diary</h1>
+            <h2>活動記録</h2>
+            <h3>日本各地(？)の様々な教会を巡ります。</h3></a> 
           </div>
           <div class="about-us">  
-            <h1>
-              <a type="button" class="button" href="https://#">about us
-              <h2>カトリック研究会について
-              <p>自己紹介・日々の活動をご紹介します</p></h2></a>
-            </h1>
+            <a type="button" class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
+            <h1>about us</h1>
+            <h2>カトリック研究会について</h2>
+            <h3>自己紹介・日々の活動をご紹介します。</h3></a>
           </div>
-          <div class="contact">  
-            <h1>
-              <a type="button" class="button" href="https://#">contact
-              <h2>コンタクトフォーム
-              <p>感想やおすすめの教会情報等あればお寄せください</p></h2></a>
-            </h1>
+          <div class="contact">
+            <a type="button" class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
+            <h1>contact</h1>
+            <h2>ご意見・ご感想募集中</h2>
+            <h3>コンタクトフォームはこちら</h3></a>
           </div>
         </ul>  
       </div>
       <div class="sns">
-        <a href="#" class="insta_btn2">
+        <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/" class="insta_btn2">
         <i class="fab fa-instagram"></i> <span>Follow Me</span>
         </a>
       </div>  
@@ -66,9 +63,9 @@
       </div> 
       <div class="footer-list">
         <ul>
-          <a href="https://#">diary</a>
-          <a href="https://#">about us</a>
-          <a href="https://#">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
         </ul>  
       </div>
     </div> 
