--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
-        </ul>  
-      </div>  
-    </header> 
+        </ul>
+      </div>
+    </header>
     <main>
       <img src="IMG_40082.jpg" alt="main-top"/>
       <div class="contents-item">
@@ -33,9 +33,9 @@
             <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
             <h1>diary</h1>
             <h2>活動記録</h2>
-            <h3>日本各地(？)の様々な教会を巡ります。</h3></a> 
+            <h3>日本各地(？)の様々な教会を巡ります。</h3></a>
           </div>
-          <div class="about-us">  
+          <div class="about-us">
             <a type="button" class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
             <h1>about us</h1>
             <h2>カトリック研究会について</h2>
@@ -47,30 +47,30 @@
             <h2>ご意見・ご感想募集中</h2>
             <h3>コンタクトフォームはこちら</h3></a>
           </div>
-        </ul>  
+        </ul>
       </div>
       <div class="sns">
         <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/" class="insta_btn2">
-        <i class="fab fa-instagram"></i> <span>Follow Me</span>
+        <i class="fab fa-instagram"></i> <span>Follow Us</span>
         </a>
-      </div>  
-    </main>     
+      </div>
+    </main>
   </body>
   <footer>
     <div class="copy-container">
       <div class="footer-logo">
         カトリック研究会
-      </div> 
+      </div>
       <div class="footer-list">
         <ul>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
-        </ul>  
+        </ul>
       </div>
-    </div> 
+    </div>
     <div class="copyright">
       <p>Copyright © 2019 <span>カトリック研究会</span> inc. All Rights Reserved.</p>
-    </div>  
-  </footer>  
+    </div>
+  </footer>
 </html>
