--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
         </ul>
+        <a class="menu-trigger" href="#">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
       </div>
     </header>
     <main>
