--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="copyright">
-      <p>Copyright © 2019 <span>カトリック研究会</span> inc. All Rights Reserved.</p>
+      <p>Copyright © 2019 カトリック研究会 inc. All Rights Reserved.</p>
     </div>
   </footer>
 </html>
