--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="Shift-JIS">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header;footer.css">
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
