--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="Shift-JIS">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="landing.css">
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="responsive.css" rel="stylesheet" type="text/css" />
+    <link href="responsive_landing.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
