--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-list">
         <ul>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">diary</a>
+          <a href="/now-constructing/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
         </ul>
