--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </div>
       <div class="header-list">
         <ul>
-          <a href="/now-constructing/">diary</a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
+          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
         </ul>
       </div>
     </header>
@@ -31,7 +31,7 @@
       <div class="contents-item">
         <ul>
           <div class="diary">
-            <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official/diary/diary_list">
+            <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official_now-constructing/">
             <h1>diary</h1>
             <h2>活動記録</h2>
             <h3>日本各地(？)の様々な教会を巡ります。</h3></a>
