link with instagram

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
       </div>
       <div class="sns">
-        <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/" class="insta_btn2">
+        <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
         <i class="fab fa-instagram"></i> <span>Follow Us</span>
         </a>
       </div>
