--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -5,30 +5,57 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="diary_list.css">
-    <title>カトリック研究会_公式_日記</title>
+    <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="responsive.css" rel="stylesheet" type="text/css" />
+    <link href="responsive_diary_list.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
       <div class="header-logo">
-        <a href="https://katoken-since2019.github.io/katoken.official/">カトリック研究会</a>
+        カトリック研究会
       </div>
       <div class="header-list">
         <ul>
-          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">diary</a>
-          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">about us</a>
-          <a href="https://katoken-since2019.github.io/katoken.official_now-constructing/">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
         </ul>
-　    </div>
+      </div>
     </header>
     <main>
-      <h1></h1>
+      <img src="IMG_40082.jpg" alt="main-top"/>
+      <div class="contents">
+        <ul>
+          <li>鶴見教会<span>横浜市</span></li>
+          <li>イグナチオ教会<span>上智大学</span></li>
+        </ul>
+      </div>
+      <div class="sns">
+        <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
+        <i class="fab fa-instagram"></i> <span>Follow Us</span>
+        </a>
+      </div>
     </main>
     <footer>
-
+      <div class="copy-container">
+        <div class="footer-logo">
+          カトリック研究会
+        </div>
+        <div class="footer-list">
+          <ul>
+            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">diary</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Copyright © 2019 カトリック研究会 inc. All Rights Reserved.</p>
+      </div>
     </footer>
   </body>
+</html>
