--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="Shift-JIS">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="diary_list.css">
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
