--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="Shift-JIS">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="../../base.css">
     <link rel="stylesheet" href="diary_list.css">
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
       </div>
       <div class="header-list">
         <ul>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
         </ul>
@@ -47,7 +47,7 @@
         </div>
         <div class="footer-list">
           <ul>
-            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">diary</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
           </ul>
