--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="responsive.css" rel="stylesheet" type="text/css" />
+    <link href="responsive_base.css" rel="stylesheet" type="text/css" />
     <link href="responsive_landing.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
