fixed reading img

--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <main>
-      <img src=".//.//IMG_40082.jpg" alt="main-top"/>
+      <img src="../../IMG_40082.jpg" alt="main-top"/>
       <div class="contents">
         <ul>
           <li>鶴見教会<span>横浜市</span></li>
