--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="header-logo">
-        カトリック研究会
+        <a href="https://katoken-since2019.github.io/katoken.official/">カトリック研究会</a>
       </div>
       <div class="header-list">
         <ul>
@@ -43,7 +43,7 @@
     <footer>
       <div class="copy-container">
         <div class="footer-logo">
-          カトリック研究会
+          <a href="https://katoken-since2019.github.io/katoken.official/">カトリック研究会</a>
         </div>
         <div class="footer-list">
           <ul>
