--- a/diary/diary_list/index.html
+++ b/diary/diary_list/index.html
@@ -30,8 +30,12 @@
       <img src="../../IMG_40082.jpg" alt="main-top"/>
       <div class="contents">
         <ul>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing"><h1>2019/6/11</h1><h2>鶴見教会<span>横浜市</span></h2></a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing"><h1>2019/6/29</h1><h2>イグナチオ教会<span>上智大学</span></h2></a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing">
+            <h1>2019/6/11</h1>
+            <h2>鶴見教会 <span>横浜市</span></h2></a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing">
+            <h1>2019/6/29</h1>
+            <h2>イグナチオ教会 <span>上智大学</span></h2></a>
         </ul>
       </div>
       <div class="sns">
