--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="header-list">
         <ul>
-          <a href="https://katoken-since2019.github.io/katoken.official/diary/diary_list/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
         </ul>
@@ -31,7 +31,7 @@
       <div class="contents-item">
         <ul>
           <div class="diary">
-            <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official/diary/diary_list/">
+            <a type="button"class="button"href="https://katoken-since2019.github.io/katoken.official/diary/">
             <h1>diary</h1>
             <h2>活動記録</h2>
             <h3>日本各地(？)の様々な教会を巡ります。</h3></a>
@@ -63,7 +63,7 @@
         </div>
         <div class="footer-list">
           <ul>
-            <a href="https://katoken-since2019.github.io/katoken.official/diary/diary_list/">diary</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
           </ul>
