fixed the path of img

--- a/diary/index.html
+++ b/diary/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <main>
-      <img src="../../IMG_40082.jpg" alt="main-top"/>
+      <img src="../IMG_40082.jpg" alt="main-top"/>
       <div class="contents">
         <ul>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing">
