--- a/contact/index.html
+++ b/contact/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="Shift-JIS">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="../base.css">
     <title>カトリック研究会_公式</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="responsive_base.css" rel="stylesheet" type="text/css" />
-    <link href="responsive_landing.css" rel="stylesheet" type="text/css" />
+    <link href="responsive_contact.css" rel="stylesheet" type="text/css" />
+    <link href="../responsive_base.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
@@ -22,12 +22,25 @@
         <ul>
           <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
         </ul>
       </div>
     </header>
     <main>
-      
+      <div class="contact-form">
+        <h1 class="section-title">コンタクトフォーム</h1>
+          <p>メールアドレス（必須）</p>
+          <input type="text" name="" value="">
+          <p>メッセージ </p>
+          <textarea name="name" rows="8" cols="80"></textarea>
+          <p>※必須項目は必ずご入力ください</p>
+          <input class="contact-submit" type="submit" name="" value="送信">
+      </div>
+      <div class="sns">
+        <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
+          <i class="fab fa-instagram"></i> <span>Follow Us</span>
+        </a>
+      </div>
     </main>
     <footer>
       <div class="copy-container">
@@ -38,7 +51,7 @@
           <ul>
             <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
           </ul>
         </div>
       </div>
