--- a/contact/index.html
+++ b/contact/index.html
@@ -29,10 +29,23 @@
     <main>
       <div class="contact-form">
         <h1 class="section-title">コンタクトフォーム</h1>
-          <label for="interlock">メールアドレス</label> <input placeholder="xxxxx@xx" id="interlock" type="email" name="email">
-          <label for="interlock">名前</label> <input placeholder="Your Name" id="interlock" type="text" name="name">
-          <label for="interlock">コメント</label> <textarea placeholder="ご意見・ご感想" id="interlock" name="comment" rows="8" cols="80"></textarea>
-          <input class="contact-submit" type="submit" name="" value="送信">
+        <form class="contact" action="index.html" method="post">
+          <div class="item">
+            <label for="interlock">メールアドレス</label>
+            <input placeholder="xxxxx@xx" id="interlock" type="email" name="email">
+          </div>
+          <div class="item">
+            <label for="interlock">名前</label>
+            <input placeholder="Your Name" id="interlock" type="text" name="name">
+          </div>
+          <div class="item">
+            <label for="interlock">コメント</label>
+            <textarea placeholder="ご意見・ご感想" id="interlock" name="comment" rows="8" cols="80"></textarea>
+          </div>
+          <div class="btn-area">
+            <input class="contact-submit" type="submit" name="" value="送信"><input type="reset" value="リセット">
+          </div>
+        </form>
       </div>
       <div class="sns">
         <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
