--- a/contact/index.html
+++ b/contact/index.html
@@ -32,11 +32,11 @@
         <form class="contact" action="index.html" method="post">
           <div class="item">
             <label for="email">メールアドレス</label>
-            <input placeholder="xxxxx@xx" id="email" type="email" name="email">
+            <input placeholder="xxxxx@xx" id="email" type="email" class="inputs" name="email">
           </div>
           <div class="item">
             <label for="name">名前</label>
-            <input placeholder="Your Name" id="name" type="text" name="name">
+            <input placeholder="Your Name" id="name" type="text" class="inputs" name="name">
           </div>
           <div class="item">
             <label for="comment">コメント</label>
