changed btn css

--- a/contact/index.html
+++ b/contact/index.html
@@ -43,11 +43,14 @@
             <textarea placeholder="ご意見・ご感想" id="comment" name="comment" rows="8" cols="80"></textarea>
           </div>
           <div class="btn-area">
-            <input class="contact-submit" type="submit" value="送信"><input type="reset" value="リセット">
+            <input class="contact-submit" type="submit" value="SEND"><input type="reset" value="RESET">
           </div>
         </form>
       </div>
       <div class="sns">
+        <div class="instagram">
+          インスタグラムでも活動の様子を公開中です
+        </div>
         <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
           <i class="fab fa-instagram"></i> <span>Follow Us</span>
         </a>
