--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         </ul>
       </div>
       <div class="sns">
+        <div class="instagram">
+          インスタグラムでも活動の様子を公開中です
+        </div>
         <a href="https://www.instagram.com/katoken.since2019/" class="insta_btn2">
         <i class="fab fa-instagram"></i> <span>Follow Us</span>
         </a>
