link with contact

--- a/contact/index.html
+++ b/contact/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="item">
             <label for="comment">コメント</label>
-            <textarea placeholder="ご意見・ご感想" id="comment" name="comment" rows="8" cols="80"></textarea>
+            <textarea placeholder="現在メッセージを送信することはできません。" id="comment" name="comment" rows="8" cols="80"></textarea>
           </div>
           <div class="btn-area">
             <input class="contact-submit" type="submit" value="SEND"><input type="reset" value="RESET">
