--- a/diary/index.html
+++ b/diary/index.html
@@ -22,7 +22,7 @@
         <ul>
           <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/contact/">contact</a>
         </ul>
       </div>
     </header>
@@ -56,7 +56,7 @@
           <ul>
             <a href="https://katoken-since2019.github.io/katoken.official/">home</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/contact/">contact</a>
           </ul>
         </div>
       </div>
