--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
           <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/contact/">contact</a>
         </ul>
       </div>
     </header>
@@ -43,7 +43,7 @@
             <h3>自己紹介・日々の活動をご紹介します。</h3></a>
           </div>
           <div class="contact">
-            <a type="button" class="button"href="https://katoken-since2019.github.io/katoken.official/now-constructing/">
+            <a type="button" class="button"href="https://katoken-since2019.github.io/katoken.official/contact/">
             <h1>contact</h1>
             <h2>ご意見・ご感想募集中</h2>
             <h3>コンタクトフォームはこちら</h3></a>
@@ -68,7 +68,7 @@
           <ul>
             <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
             <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
-            <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">contact</a>
+            <a href="https://katoken-since2019.github.io/katoken.official/contact/">contact</a>
           </ul>
         </div>
       </div>
