chenged now constructing

--- a/now-constructing/index.html
+++ b/now-constructing/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>カトリック研究会_公式_工事中</title>
+    <link rel="stylesheet" href="../base.css">
+    <link rel="stylesheet" href="now-constructing.css">
+    <title>カトリック研究会_公式</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Quicksand&display=swap" rel="stylesheet">
+    <link href="../responsive_base.css" rel="stylesheet" type="text/css" />
   </head>
+  <body>
+    <header>
+      <div class="header-logo">
+        カトリック研究会
+      </div>
+      <div class="header-list">
+        <ul>
+          <a href="https://katoken-since2019.github.io/katoken.official/diary/">diary</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/now-constructing/">about us</a>
+          <a href="https://katoken-since2019.github.io/katoken.official/contact/">contact</a>
+        </ul>
+      </div>
+    </header>
   <body>
     <header>
       <div class="header-logo">
