--- a/now-constructing/index.html
+++ b/now-constructing/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="now-constructing.css">
-    <title>カトリック研究会_公式</title>
+    <title>カトリック研究会_公式_工事中</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
