--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <main>
-      <img src="IMG_4014(1).jpg" alt="main-top"/>
+      <img src="IMG_4014.jpg" alt="main-top"/>
       <div class="contents-item">
         <ul>
           <div class="diary">
