--- a/contact/index.html
+++ b/contact/index.html
@@ -49,6 +49,7 @@
           <div class="item">
             <p class="label">年齢</p>
             <select class="inputs select" name="age">
+              <option value="none"></option>
               <option value="10">10代</option>
               <option value="20">20代</option>
               <option value="30">30代</option>
@@ -60,7 +61,7 @@
           </div>
           <div class="item">
             <label for="comment" class="label">コメント</label>
-            <textarea placeholder="現在メッセージを送信することはできません。" id="comment" name="comment" rows="8" cols="80"></textarea>
+            <textarea class="inputs" placeholder="現在メッセージを送信することはできません。" id="comment" name="comment" rows="8" cols="80"></textarea>
           </div>
           <div class="btn-area">
             <input class="contact-submit" type="submit" value="SEND"><input type="reset" value="RESET">
