--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@
     <main>
       <div class="contact-form">
         <h1 class="section-title">コンタクトフォーム</h1>
-        <form class="contact" action="index.html" method="post" name="form" onsubmit="return check(this)">
+        <form class="contact" action="contact.php" method="post" name="form" onsubmit="return check(this)">
           <div class="item">
             <label for="email" class="label">メールアドレス</label>
             <input placeholder="xxxxx@xx" id="email" type="email" class="inputs" name="email">
